--- a/css/style.css
+++ b/css/style.css
@@ -40,12 +40,16 @@ ul li a:hover{
   border-radius: 15px;
 }
 
-.logo h2{
+h2{
+  color: #fff;
+}
+
+.logo{
   float: left;
   width: 50px;
   height: auto;
   margin-top: 20px;	
-  color: white;
+  margin-left: 20px;
 }
 
 .main{
