--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ header{
 ul{
   float: right;
   list-style-type: none;
-  margin-top: 40px;
+  margin-top: 20px;
+  margin-right: 20px;
 }  
 
 ul li{
